<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBackground">
    <ImageView
        android:id="@+id/animatedImage"
        android:contentDescription="@string/image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/animate_selected_bg"/>
        <LinearLayout
            android:id="@+id/selectedItemsLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_ko"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"
                android:gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_result"
                android:background="@color/colorGray"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="19sp"
                android:textColor="@color/colorWhite"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/selectedItemsLayoutCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_above="@id/selectedItemsLayoutBottom"
            android:layout_below="@id/selectedItemsLayoutTop"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/selectedImage"
                android:layout_gravity="center"
                android:contentDescription="@string/image_selected"
                android:scaleType="centerCrop"
                android:layout_width="200dp"
                android:layout_height="200dp" />
            <TextView
                android:id="@+id/selectedText"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/selectedItemsLayoutBottom"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">
            <Button
                android:id="@+id/btnRestart"
                android:gravity="center"
                android:text="@string/btn_restart"
                android:background="@drawable/rounded_btn"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
</RelativeLayout>